# AIPneumoScan

./: .env.example  .gitignore  .python-version  Dockerfile.api  Dockerfile.app  Makefile  README.md  pyproject.toml
api/: main.py
app/: app.py
pneumoscan/pneumoscan/: __init__.py
pneumoscan/pneumoscan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pneumoscan/pneumoscan/data/: __init__.py  preprocess.py
pneumoscan/pneumoscan/model/: __init__.py  explain.py  load.py  predict.py
pneumoscan/pneumoscan/utils/: __init__.py  io.py
tests/: test_api.py
